<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:title="@string/navigation_fragment_home" android:checked="true" />
        <item android:id="@+id/nav_communication" android:title="@string/navigation_fragment_communication" />
        <item android:id="@+id/nav_detection" android:title="@string/navigation_fragment_detection" />
        <item android:id="@+id/nav_instruction" android:title="@string/navigation_fragment_instruction" />
        <item android:id="@+id/nav_search" android:title="@string/navigation_fragment_search" />
        <item android:id="@+id/nav_logging" android:title="@string/navigation_fragment_logging" />
        <item android:id="@+id/nav_settings" android:title="@string/navigation_fragment_settings" />
    </group>
</menu>