<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settings_ad_name_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_name_ad_device_name">

                <EditText
                    android:id="@+id/settings_ad_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settings_ad_interval_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_name_ad_interval">

                <EditText
                    android:id="@+id/settings_ad_interval_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settings_ad_timeout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_name_ad_timeout">

                <EditText
                    android:id="@+id/settings_ad_timeout_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/settings_tx_power_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_name_ad_tx">

                <EditText
                    android:id="@+id/settings_tx_power_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/settings_control" layout="@layout/layout_button_bar_main_activity" />
</LinearLayout>